# build

./: CONTRIBUTING.md  NOTICE.md
.github/: dependabot.yml
.github/actions/check-dependencies/: action.yml
.github/actions/compile-hugo/: action.yml
.github/actions/dash-license-check-action/: action.yml
.github/actions/fetch-main-table-csv-ref/: action.yml
.github/actions/handle-table-diff-view/: action.yml
.github/actions/handle-table-diff-view/diff/: pyproject.toml  sslz_out.md
.github/actions/handle-table-diff-view/diff/table-diff-view-handle/: __main__.py  (+3 more)
.github/actions/set-version/: action.yml
.github/actions/setup-asciidoctor/: action.yml
.github/actions/setup-java/: action.yml  settings.xml
.github/actions/update-dependency-file/: action.yml
.github/workflows/: build-docker-images.yml  build-util-plugin.yml  buildDocker.yml  dash.yml  release-branch.yml  release-tag.yml  update-dependencies.yml
ci/deploy-release/: Jenkinsfile
ci/release/: Jenkinsfile
ci/release-branch/: Jenkinsfile
docker/rust/: Dockerfile
docker/table-diff-handle/: .gitignore  Dockerfile  pyproject.toml
docker/table-diff-handle/tablediffview/: __main__.py  config.py  create_diff_markdown.py  github_api_handle.py
docker/update-table-reference/: Dockerfile  README.md  pyproject.toml
docker/update-table-reference/updatereference/: __main__.py  constant.py  github_api_request.py
utils/license-maven-plugin/: pom.xml
utils/release-notes-maven-plugin/: pom.xml
utils/rootfiles-maven-plugin/: pom.xml
vars/: ghCreateTagAndBuild.groovy  ghWorkflow.groovy
(+6 files in other folders)
