[tool.poetry]
name = "tablediffview"
version = "0.1.0"
description = ""
authors = ["Quang Truong <truong.quang@scheidt-bachmann-st.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
html2text = "^2024.2.26"
tabulate = "^0.9.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
